--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@redbuck/image-uploader": "^0.1.15",
-    "@redbuck/sorter": "^0.0.4",
+    "@redbuck/sorter": "0.0.6",
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
     "dayjs": "^1.8.11",
