--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^2.2.0",
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
+    "photoswipe": "^4.1.3",
     "screenfull": "^4.2.0",
     "vant": "^2.0.1",
     "vue": "^2.5.2",
